--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: podman build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
+      run: podman build . --file Dockerfile --tag $IMAGE_NAME --tag $IMAGE_NAME:$ANSIBLE_VERSION --label "runnumber=${GITHUB_RUN_ID}" --build-arg ANSIBLE_VERSION=$ANSIBLE_VERSION
     - name: Log in to registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
     - name: Push image
@@ -31,6 +31,4 @@ jobs:
         [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
         [ "$VERSION" == "main" ] && VERSION=latest
         echo IMAGE_ID=$IMAGE_ID
-        echo VERSION=$VERSION
-        podman tag $IMAGE_NAME $IMAGE_ID:$VERSION
-        podman push $IMAGE_ID:$VERSION
+        podman push $IMAGE_ID
