--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,8 +8,9 @@ on:
 
 env:
   IMAGE_NAME: ansible
-  ANSIBLE_VERSION: "2.17.5"  # Specify the required Ansible version here
-
+  #ANSIBLE_VERSION: "2.17.5"  # Specify the required Ansible version here
+  ANSIBLE_VERSION: "latest"
+  
 
 jobs:
 
