--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,9 +7,8 @@ on:
     branches: [ "main" ]
 
 env:
-  IMAGE_NAME: ansible
-  #ANSIBLE_VERSION: "2.17.5"  # Specify the required Ansible version here
-  ANSIBLE_VERSION: "latest"
+  IMAGE_NAME: ansible-core
+  ANSIBLE_VERSION: "2.17.5"  # Specify the required Ansible version here
   
 
 jobs:
