--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,42 +1,50 @@
-name: Docker Image CI
+name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-env:
-  IMAGE_NAME: ansible-core
-  ANSIBLE_VERSION: "2.18.0"  # Specify the required Ansible version here
-  
+    tags:
+      - '*-smarty*'
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: podman build . --file Dockerfile --tag $IMAGE_NAME --tag $IMAGE_NAME:$ANSIBLE_VERSION --label "runnumber=${GITHUB_RUN_ID}" --build-arg ANSIBLE_VERSION=$ANSIBLE_VERSION
-    - name: Log in to registry
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-    - name: Push image
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Extract version and enrichment tag
+      id: vars
       run: |
-        podman image ls
-        IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
-        IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
         VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-        [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-        [ "$VERSION" == "main" ] && VERSION=latest
+        VERSION=$(echo $VERSION | sed -e 's/^v//')
+        ANSIBLE_VERSION=$(echo $VERSION | sed -e 's/-.*//')
+        ENRICHMENT_TAG=$(echo $VERSION | sed -e 's/^[0-9.]*-//')
+        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "ANSIBLE_VERSION=$ANSIBLE_VERSION" >> $GITHUB_ENV
+        echo "ENRICHMENT_TAG=$ENRICHMENT_TAG" >> $GITHUB_ENV
 
-        # Custom tagging logic
-        if [[ "$VERSION" =~ ^2\.18\.0-smarty[0-9]+\.[0-9]+$ ]]; then
-          ENRICHMENT_TAG=$(echo $VERSION | sed -e 's/^2\.18\.0-//')
-          podman push $IMAGE_NAME $IMAGE_ID:$ENRICHMENT_TAG
-        fi
+    - name: Build Docker image
+      run: |
+        docker build --build-arg ANSIBLE_VERSION=${{ env.ANSIBLE_VERSION }} -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.VERSION }} .
+        docker tag ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.VERSION }} ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.ENRICHMENT_TAG }}
+        docker tag ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.VERSION }} ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
 
-        podman push $IMAGE_NAME $IMAGE_ID:$VERSION
-        podman push $IMAGE_NAME $IMAGE_ID:latest
+    - name: Push Docker image
+      run: |
+        docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.VERSION }}
+        docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.ENRICHMENT_TAG }}
+        docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
