--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,8 +29,6 @@ jobs:
     - name: Extract version and enrichment tag
       id: vars
       run: |
-        echo "Repository: ${{ github.repository }}"
-        echo "Repository Owner: ${{ github.repository_owner }}"
         VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
         VERSION=$(echo $VERSION | sed -e 's/^v//')
         ANSIBLE_VERSION=$(echo $VERSION | sed -e 's/-.*//')
@@ -41,12 +39,12 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build --build-arg ANSIBLE_VERSION=${{ env.ANSIBLE_VERSION }} -t ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.VERSION }} .
-        docker tag ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.VERSION }} ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.ENRICHMENT_TAG }}
-        docker tag ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.VERSION }} ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
+        docker build --build-arg ANSIBLE_VERSION=${{ env.ANSIBLE_VERSION }} -t ghcr.io/${{ github.repository }}:${{ env.VERSION }} .
+        docker tag ghcr.io/${{ github.repository }}:${{ env.VERSION }} ghcr.io/${{ github.repository }}:${{ env.ENRICHMENT_TAG }}
+        docker tag ghcr.io/${{ github.repository }}:${{ env.VERSION }} ghcr.io/${{ github.repository }}:latest
 
     - name: Push Docker image
       run: |
-        docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.VERSION }}
-        docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ env.ENRICHMENT_TAG }}
-        docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
+        docker push ghcr.io/${{ github.repository }}:${{ env.VERSION }}
+        docker push ghcr.io/${{ github.repository }}:${{ env.ENRICHMENT_TAG }}
+        docker push ghcr.io/${{ github.repository }}:latest
